fix(front): dropdown text centering on firefox

--- a/apps/frontend/src/app/theme/styles.css
+++ b/apps/frontend/src/app/theme/styles.css
@@ -431,7 +431,7 @@
 
       & p {
         padding-left: 0.5rem;
-        align-content: center;
+        margin: auto;
       }
 
       & m-icon {
